# spill

./: .gitignore  FIRESTORE_DEPLOY.md  GAME_DEPLOY_STEPS.md  GAME_SETUP.md  GITHUB_PUSH.md  PROJECT_REPORT.md  PUSH_AND_RUN.md  PUSH_NOTIFICATIONS_SETUP.md  READY_MADE_GAMES.md  app.json  app.json.example  firebase.json  firestore.indexes.json  firestore.rules  hardikgurjar.maja-aaagya-bhai-0.0.4.vsix  mastersam.faaaah-on-fail-0.4.1.vsix  matches-migration.sql  metro.config.js  package-lock.json  package.json  premium-migration.sql  shoaibkorai.faaah-0.0.6.vsix  storage-cors.json  storage.rules  tsconfig.json  vent-mode-migration.sql
app/: KeyboardAwareLayout.native.tsx  KeyboardAwareLayout.tsx  _layout.tsx  auth-callback.js  challenge-proof.tsx  chess.tsx  comments.tsx  create-challenge.tsx  createpost.tsx  document-viewer.tsx  error.tsx  forgetpassword.tsx  functions.tsx  game-webview.tsx  group.tsx  index.tsx  login.tsx  logout.tsx  match-chat.tsx  message.tsx  notifications.tsx  payment.tsx  premium-welcome.tsx  premium.tsx  profile.tsx  reset-password.tsx  resource-pdf-reader.tsx  resources.tsx  settings.tsx  signup.tsx  streaks.tsx  success.tsx  therapists.tsx
components/: SharedChatUI.tsx  (+2 more)
game-ttt/repos/tictactoe/Server/: .dockerignore  Dockerfile  main.py  pyproject.toml
game-ttt/repos/tictactoe/Server/TTT/: RESTServer.py  SocketIOServer.py  __init__.py
game-ttt/repos/tictactoe/Server/TTT/Game/: Player.py  Room.py
game-ttt/repos/tictactoe/Server/TTT/lib/: remove_room_on_not_joined.py
game-ttt/repos/tictactoe/Server/TTT/namespaces/: Game.py
(+62 files in other folders)
